--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsetfacl.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsetfacl.1.docbook
@@ -53,6 +53,23 @@ owner, group and others are not removed.)</para>
 </varlistentry>
 
 <varlistentry>
+<term><option>-n</option></term>
+<listitem>
+<para>do not recalculate the mask entry of the ACL. The default
+behavior of gfsetfacl is to recalculate the mask entry, if a mask
+entry is not explicitly given.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-r</option></term>
+<listitem>
+<para>always recalculate the mask entry of the ACL. (Even if a mask
+entry is explicitly given.) (See the -n option.)</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><option>-t</option></term>
 <listitem>
 <para>is test mode. Instead of changing the ACL of any files or
