--- a/gfarm_v2/trunk/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "29 January 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "17 3月 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -834,6 +834,100 @@ Example:
 .nf
 	profile enable
 .fi
+.TP
+\fBmetadb_server_list \fIgfmd-hostname[:port]\fB \fI\&...\fB\fR
+This parameter specifies connection destinations of redundant metadata servers delimited by space.
+The master gfmd is specified for the head. The slave gfmds are specified from the second.
+If port is not specified, port will be 601 which is the default value.
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. This parameter is always available in gfarm2.conf.
+
+Example:
+
+.nf
+	metadb_server_list mdsmaster mdsslave:701
+.fi
+.TP
+\fBsynchronous_replication \fIvalidity\fB\fR
+This parameter specifies the timing of the metadata replication.
+When "enable" is specified, the synchronous replication is selected.
+When "disable" is specified, the asynchronous replication is selected.
+The default is "enable".
+
+The synchronous replication completes both sending update information to
+all slave gfmds connected and calling fdatasync against the journal file.
+When the "synchronous_journaling" is "disable", it does not call fdatasync.
+
+The asynchronous replication completes only calling fdatasync against the jounral
+when the gfmd recieves the client requests.
+When the "synchronous_journaling" is "disable", it does not call fdatasync.
+On the other side, the resident thread sends update information
+stored in the journal file to the slaves connected.
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+
+Example:
+
+.nf
+	synchronous_replication disable
+.fi
+.TP
+\fBsynchronous_replication_timeout \fIseconds\fB\fR
+This parameter specifies timeout for executing synchronous replication in seconds.
+If the timeout period passed, the connection to the slave gfmd where replicates to
+will disconnect.
+The replication process in the master gfmd for the disconnected slave gfmd stops until
+the slave gfmd connects.
+The default is 10.
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+
+Example:
+
+.nf
+	synchronous_replication_timeout 30
+.fi
+.TP
+\fBsynchronous_journaling \fIvalidity\fB\fR
+When "enable" is specified, fdatasync is called
+after update information is saved to the journal file.
+The timing of calling fdatasync is after writing the records from transaction-begin
+to transaction-end in one transaction.
+The default is "enable".
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+
+Example:
+
+.nf
+	synchronous_journaling disable
+.fi
+.TP
+\fBmetadb_journal_dir \fIdirectory\fB\fR
+This parameter specifies the directory for the journal file.
+The value of this parameter is specified at config-gfarm execution .
+When this parameter is not specified, the gfmd does not start.
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+
+Example:
+
+.nf
+	metadb_journal_dir /var/gfarm-metadata/journal
+.fi
+.TP
+\fBmetadb_journal_max_size \fIfile_size\fB\fR
+This parameter specifies the max size of the journal file in bytes.
+Beware that the larger the size is, the longer it takes time for the gfmd to complete starting.
+The default is 33554432 (32 MBytes).
+
+This parameter is only available in gfmd.conf only when the configuration is done with --enable-metadata-replication. In other cases, this parameter is ingored.
+
+Example:
+
+.nf
+	metadb_journal_max_size 8388608
+.fi
 .SH "GRAMMAR"
 .PP
 This is a grammar of gfarm2.conf described by the BNF
@@ -885,7 +979,13 @@ notation.
 		\~\~<attr_cache_timeout_statement> |
 		\~\~<log_level_statement> |
 		\~\~<log_message_verbose_level_statement> |
-		\~\~<profile_statement>
+		\~\~<profile_statement> |
+		\~\~<metadb_server_list_statement> |
+		\~\~<synchronous_replication_statement> |
+		\~\~<synchronous_replication_timeout_statement> |
+		\~\~<synchronous_journaling_statement> |
+		\~\~<metadb_journal_dir_statement> |
+		\~\~<metadb_journal_max_size_statement>
 	<spool_statement> ::= "spool" <pathname>
 	<spool_server_listen_address_statement> ::=
 		\~\~"spool_server_listen_address" <ipv4_address>
@@ -955,11 +1055,23 @@ notation.
 	<log_message_verbose_level_statement> ::= "log_message_verbose_level" <number>
 	<no_file_system_node_timeout_statement> ::= "no_file_system_node_timeout" <number>
 	<gfmd_reconnection_timeout_statement> ::= "gfmd_reconnection_timeout" <number>
-	<record_atime_statement> ::= "profile" <validity>
+	<profile_statement> ::= "profile" <validity>
+	<metadb_server_list_statement> ::= "metadb_server_list" <metadb_server_list_spec>
+	<metadb_server_list_spec> ::=
+		\~\~<hostname_port_spec> |
+		\~\~<hostname_port_spec> <metadb_server_list_spec>
+	<synchronous_replication_statement> ::= "synchronous_replication" <validity>
+	<synchronous_replication_timeout_statement> ::= "synchronous_replication_timeout" <number>
+	<synchronous_journaling_statement> ::= "synchronous_journaling" <validity>
+	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
+	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
 	<hostspec> ::= <ipv4_address> | <ipv4_address> "/" <address_mask> |
 		\~\~<hostname> | "." <domain_name> | "*"
 	<pathname> ::= <pathname_character> <pathname_character>*
 	<pathname_character> ::= <hostname_character> | "," | "/" | "_"
+	<hostname_port_spec> ::=
+		\~\~<hostname>|
+		\~\~<hostname> ":" <portnumber>
 	<hostname> ::= <hostname_character> <hostname_character>*
 	<hostname_character> ::= <alphabet> | <digit> | "-" | "."
 	<portnumber> ::= <number>
