--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "29 January 2011" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "17 3æœˆ 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- GfarmÀßÄê¥Õ¥¡¥¤¥ë
@@ -784,6 +784,97 @@ Gfarm¥¯¥é¥¤¥¢¥ó¥È¥é¥¤¥Ö¥é¥ê¤Ï¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥Î¡¼¥É¤¬ÍøÍÑ²ÄÇ½¤Ë¤Ê¤ë¤Þ¤Ç»î¹Ô¤ò·«¤
 .nf
 	profile enable
 .fi
+.TP
+\fBmetadb_server_list \fIgfmd¥Û¥¹¥ÈÌ¾[:¥Ý¡¼¥ÈÈÖ¹æ]\fB \fI\&...\fB\fR
+¾éÄ¹²½¥á¥¿¥Ç¡¼¥¿¥µ¡¼¥Ð¤ÎÀÜÂ³Àè°ìÍ÷¤ò¥¹¥Ú¡¼¥¹¶èÀÚ¤ê¤Ç»ØÄê¤·¤Þ¤¹¡£
+ÀèÆ¬¤Ë¥Þ¥¹¥¿¡¼gfmd¡¢2ÈÖÌÜ°Ê¹ß¤Ë¥¹¥ì¡¼¥Ögfmd¤ò»ØÄê¤·¤Þ¤¹¡£
+¥Ý¡¼¥ÈÈÖ¹æ¤ò¾ÊÎ¬¤¹¤ë¤È¥Ç¥Õ¥©¥ë¥È¤Î601¤ò»ØÄê¤·¤¿¤³¤È¤Ë¤Ê¤ê¤Þ¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Ë¤ª¤¤¤Æ¤Ïconfigure»þ¤Ë --enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£gfarm2.conf¤Ë¤ª¤¤¤Æ¤Ï¡¢¾ï¤ËÍ­¸ú¤Ç¤¹¡£
+
+Îã:
+
+.nf
+	metadb_server_list mdsmaster mdsslave:701
+.fi
+.TP
+\fBsynchronous_replication \fIÍ­¸úÀ­\fB\fR
+¥á¥¿¥Ç¡¼¥¿¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Î¥¿¥¤¥ß¥ó¥°¤òÀßÄê¤·¤Þ¤¹¡£
+¤³¤Î¥ª¥×¥·¥ç¥ó¤¬enable¤Î¾ì¹ç¡¢Æ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¡¢
+disable¤Î¾ì¹ç¡¢ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤¬ÁªÂò¤µ¤ì¤Þ¤¹¡£
+¥Ç¥Õ¥©¥ë¥È¤Ïenable¤Ç¤¹¡£
+
+Æ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¥¯¥é¥¤¥¢¥ó¥È¤«¤é¤Î¥ê¥¯¥¨¥¹¥È¤ËÂÐ¤·¤ÆÊÖ¿®¤¹¤ëÁ°¤Ë¡¢
+ÀÜÂ³Ãæ¤ÎÁ´¤Æ¤Î¥¹¥ì¡¼¥Ögfmd¤Ø¤Î¹¹¿·¾ðÊóÁ÷¿®¤È¡¢
+¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤Îfdatasync¤ò´°Î»¤·¤Þ¤¹¡£
+synchronous_journaling¤¬disable¤Î¤È¤­¤Ïfdatasync¤ò¼Â¹Ô¤·¤Þ¤»¤ó¡£
+
+ÈóÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¥¯¥é¥¤¥¢¥ó¥È¤«¤é¤Î¥ê¥¯¥¨¥¹¥È»þ¤Ë¤Ï¡¢
+¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤Îfdatasync¤À¤±¤ò¹Ô¤¤¤Þ¤¹¡£
+synchronous_journaling¤¬disable¤Î¤È¤­¤Ïfdatasync¤ò¼Â¹Ô¤·¤Þ¤»¤ó¡£
+°ìÊý¤Ç¡¢¾ïÃó¥¹¥ì¥Ã¥É¤¬¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤ËÊÝÂ¸¤µ¤ì¤¿¹¹¿·¾ðÊó¤ò¡¢
+ÀÜÂ³Ãæ¤ÎÁ´¤Æ¤Î¥¹¥ì¡¼¥Ögfmd¤ØÁ÷¿®¤·¤Þ¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+
+Îã:
+
+.nf
+	synchronous_replication disable
+.fi
+.TP
+\fBsynchronous_replication_timeout \fIÉÃ¿ô\fB\fR
+¥á¥¿¥Ç¡¼¥¿¤ÎÆ±´ü¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¼Â¹Ô»þ¤Î¥¿¥¤¥à¥¢¥¦¥È»þ´Ö¤òÉÃÃ±°Ì¤ÇÀßÄê¤·¤Þ¤¹¡£
+¥¿¥¤¥à¥¢¥¦¥È»þ´Ö¤ò²á¤®¤¿¾ì¹ç¡¢Æ±´üÀè¤Î¥¹¥ì¡¼¥Ögfmd¤È¤Îgfmd channel¤ÎÀÜÂ³¤ÏÀÚÃÇ¤µ¤ì¤Þ¤¹¡£
+ÀÜÂ³¤¬ÀÚÃÇ¤·¤¿¥¹¥ì¡¼¥Ögfmd¤Ø¤Î¥ì¥×¥ê¥±¡¼¥·¥ç¥ó¤Ï¡¢¥¹¥ì¡¼¥Ögfmd¤¬ºÆÀÜÂ³¤·¤Æ¤¯¤ë¤Þ¤ÇÃæÃÇ¤·¤Þ¤¹¡£
+¥Ç¥Õ¥©¥ë¥È¤Ï 10 ¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+
+Îã:
+
+.nf
+	synchronous_replication_timeout 30
+.fi
+.TP
+\fBsynchronous_journaling \fIÍ­¸úÀ­\fB\fR
+¤³¤Î¥ª¥×¥·¥ç¥ó¤¬enable¤Î¾ì¹ç¡¢¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤Ø¹¹¿·¾ðÊó¤òÊÝÂ¸¤·¤¿¸å¤Ëfdatasync¤ò¼Â¹Ô¤·¤Þ¤¹¡£
+¼Â¹Ô¤¹¤ë¥¿¥¤¥ß¥ó¥°¤Ï¡¢1¤Ä¤Î¥È¥é¥ó¥¶¥¯¥·¥ç¥ó¤Î³«»Ï¤«¤é½ªÎ»¤Þ¤Ç¤Î¥ì¥³¡¼¥É¤ò½ñ¤­¹þ¤ó¤À¸å¤Ç¤¹¡£
+¥Ç¥Õ¥©¥ë¥È¤Ïenable¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+
+Îã:
+
+.nf
+	synchronous_journaling disable
+.fi
+.TP
+\fBmetadb_journal_dir \fI¥¸¥ã¡¼¥Ê¥ë¥Ç¥£¥ì¥¯¥È¥ê\fB\fR
+¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤ÎÊÝÂ¸¥Ç¥£¥ì¥¯¥È¥ê¤ò»ØÄê¤·¤Þ¤¹¡£
+¤³¤Î¥ª¥×¥·¥ç¥ó¤Ïconfig-gfarm¤Ç»ØÄê¤·¤Þ¤¹¡£
+¤³¤Î¥ª¥×¥·¥ç¥ó¤¬»ØÄê¤µ¤ì¤Æ¤¤¤Ê¤¤¾ì¹ç¡¢gfmd¤Ïµ¯Æ°¤·¤Þ¤»¤ó¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+
+Îã:
+
+.nf
+	metadb_journal_dir /var/gfarm-metadata/journal
+.fi
+.TP
+\fBmetadb_journal_max_size \fI¥Õ¥¡¥¤¥ë¥µ¥¤¥º\fB\fR
+¥¸¥ã¡¼¥Ê¥ë¥Õ¥¡¥¤¥ë¤ÎºÇÂç¥µ¥¤¥º¤ò»ØÄê¤·¤Þ¤¹¡£
+¥µ¥¤¥º¤¬Âç¤­¤¤¤Û¤É¡¢gfmd¤¬µ¯Æ°´°Î»¤¹¤ë¤Þ¤Ç¤Î»þ´Ö¤¬Ä¹¤¯¤Ê¤ë¤³¤È¤ËÃí°Õ¤·¤Æ¤¯¤À¤µ¤¤¡£
+¥Ç¥Õ¥©¥ë¥È¤Ï 33554432 (32 MBytes)¤Ç¤¹¡£
+
+¤³¤ÎÊ¸¤Ïgfmd.conf¤Î¤ß¤ÇÍ­¸ú¤Ç¤¹¡£configure»þ¤Ë--enable-metadata-replication¤ò»ØÄê¤·¤¿¤È¤­¤Ë¤Î¤ßÍ­¸ú¤Ç¤¢¤ê¡¢¤½¤ì°Ê³°¤Î¾ì¹ç¤ÏÌµ»ë¤µ¤ì¤Þ¤¹¡£
+
+Îã:
+
+.nf
+	metadb_journal_max_size 8388608
+.fi
 .SH "GRAMMAR"
 .PP
 gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
@@ -834,7 +925,13 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 		\~\~<attr_cache_timeout_statement> |
 		\~\~<log_level_statement> |
 		\~\~<log_message_verbose_level_statement> |
-		\~\~<profile_statement>
+		\~\~<profile_statement> |
+		\~\~<metadb_server_list_statement> |
+		\~\~<synchronous_replication_statement> |
+		\~\~<synchronous_replication_timeout_statement> |
+		\~\~<synchronous_journaling_statement> |
+		\~\~<metadb_journal_dir_statement> |
+		\~\~<metadb_journal_max_size_statement>
 	<spool_statement> ::= "spool" <pathname>
 	<spool_server_listen_address_statement> ::=
 		\~\~"spool_server_listen_address" <ipv4_address>
@@ -904,11 +1001,23 @@ gfarm2.conf¤ÎÊ¸Ë¡¤òBNF¤Çµ­½Ò¤¹¤ë¤È¡¢²¼µ­¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 	<log_message_verbose_level_statement> ::= "log_message_verbose_level" <number>
 	<no_file_system_node_timeout_statement> ::= "no_file_system_node_timeout" <number>
 	<gfmd_reconnection_timeout_statement> ::= "gfmd_reconnection_timeout" <number>
-	<record_atime_statement> ::= "profile" <validity>
+	<profile_tatement> ::= "profile" <validity>
+	<metadb_server_list_statement> ::= "metadb_server_list" <metadb_server_list_spec>
+	<metadb_server_list_spec> ::=
+		\~\~<hostname_port_spec> |
+		\~\~<hostname_port_spec> <metadb_server_list_spec>
+	<synchronous_replication_statement> ::= "synchronous_replication" <validity>
+	<synchronous_replication_timeout_statement> ::= "synchronous_replication_timeout" <number>
+	<synchronous_journaling_statement> ::= "synchronous_journaling" <validity>
+	<metadb_journal_dir_statement> ::= "metadb_journal_dir" <pathname>
+	<metadb_journal_max_size_statement> ::= "metadb_journal_max_size" <number>
 	<hostspec> ::= <ipv4_address> | <ipv4_address> "/" <address_mask> |
 		\~\~<hostname> | "." <domain_name> | "*"
 	<pathname> ::= <pathname_character> <pathname_character>*
 	<pathname_character> ::= <hostname_character> | "," | "/" | "_"
+	<hostname_port_spec> ::=
+		\~\~<hostname>|
+		\~\~<hostname> ":" <portnumber>
 	<hostname> ::= <hostname_character> <hostname_character>*
 	<hostname_character> ::= <alphabet> | <digit> | "-" | "."
 	<portnumber> ::= <number>
