--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfquotacheck.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfquotacheck.1.docbook
@@ -1,37 +1,36 @@
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN">
 
-<refentry id='gfusage.1'>
+<refentry id='gfquotacheck.1'>
 
 <refentryinfo><date>23 Mar 2011</date></refentryinfo>
 
 <refmeta>
-<refentrytitle>gfusage</refentrytitle>
+<refentrytitle>gfquotacheck</refentrytitle>
 <manvolnum>1</manvolnum>
 <refmiscinfo>Gfarm</refmiscinfo>
 </refmeta>
 
 <refnamediv id='name'>
-<refname>gfusage</refname>
-<refpurpose>display the current usage</refpurpose>
+<refname>gfquotacheck</refname>
+<refpurpose>build a table of current usage and enable the quota check
+</refpurpose>
 </refnamediv>
 
 <refsynopsisdiv id='synopsis'>
 <cmdsynopsis>
-  <command>gfusage</command>
-    <arg choice='opt'>options</arg>
-    <arg choice='opt'>name</arg>
+  <command>gfquotacheck</command>
+    <arg choice='opt'><replaceable>options</replaceable></arg>
 </cmdsynopsis>
 </refsynopsisdiv>
 
 <refsect1 id='description'><title>DESCRIPTION</title>
 
-<para><command>gfusage</command> displays the current usage for users
-or groups.  If <parameter>name</parameter> is specified, it displays
-only the specified user or group.  With the -g option, it displays the
-current usage for groups.  The current usage is available for users or
-groups after building a table of the current usage
-by <command>gfedquota</command> and
-<command>gfquotacheck</command>.</para>
+<para><command>gfquotacheck</command> builds a table of the current
+usage for users and groups whose quota are edited by gfedquota, and
+enables the quota check.</para>
+
+<para>This command can be executed by an administrator in the gfarmadm
+group.</para>
 
 </refsect1>
 
@@ -39,9 +38,10 @@ by <command>gfedquota</command> and
 <variablelist>
 
 <varlistentry>
-<term><option>-g</option></term>
+<term><option>-P NAME</option></term>
 <listitem>
-<para>Displays the current usage for groups.</para>
+<para>Specifies a path name to specify a metadata server instead of
+the root metadata server.</para>
 </listitem>
 </varlistentry>
 
@@ -58,10 +58,13 @@ by <command>gfedquota</command> and
 <refsect1 id='see-also'><title>SEE ALSO</title>
 <para>
   <citerefentry>
-  <refentrytitle>gfdf</refentrytitle><manvolnum>1</manvolnum>
+  <refentrytitle>gfedquota</refentrytitle><manvolnum>1</manvolnum>
   </citerefentry>,
   <citerefentry>
   <refentrytitle>gfquota</refentrytitle><manvolnum>1</manvolnum>
+  </citerefentry>,
+  <citerefentry>
+  <refentrytitle>gfusage</refentrytitle><manvolnum>1</manvolnum>
   </citerefentry>
 </para>
 </refsect1>
