--- a/gfarm_v2/trunk/man/ja/man1/gfusage.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfusage.1
@@ -3,21 +3,35 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFUSAGE" "1" "24 July 2006" "Gfarm" ""
+.TH "GFUSAGE" "1" "23 March 2011" "Gfarm" ""
 
 .SH NAME
-gfusage \- Gfarm の使用量を表示する
+gfusage \- 現在の使用量を表示する
 .SH SYNOPSIS
 
-\fBgfusage\fR [ \fB-c\fR ]
+\fBgfusage\fR [ \fBオプション\fR ] [ \fB名前\fR ]
 
 .SH "DESCRIPTION"
 .PP
-\fBgfusage\fR は、ユーザごとに Gfarm ファイルシステムの使用量を表示します。
+\fBgfusage\fR は、Gfarm ファイルシステムの使用量を
+ユーザごとやグループごとに表示します。
+\fI名前\fRを指定すると、そのユーザやグループだけを表示
+します。
+デフォルトはユーザの使用量を表示しますが、-g オプションを指定すると、グ
+ループの使用量を表示します。
+\fBgfedquota\fR と \fBgfquotacheck\fR によっ
+て使用量テーブルを構築すると、ユーザやグループの使用量を利用できます。
+.TP
+\fB-P NAME\fR
+指定したパス名により特定のメタデータサーバを指定します。
 .SH "OPTIONS"
 .TP
-\fB-c\fR
-ファイル複製を考慮して合計サイズを計算します。
+\fB-g\fR
+グループの使用量を表示します。
+.TP
+\fB-?\fR
+引数オプションを表示します。
 .SH "SEE ALSO"
 .PP
-\fBgfdf\fR(1)
+\fBgfdf\fR(1),
+\fBgfquota\fR(1)
