--- a/gfarm_v2/trunk/man/man1/gfusage.1
+++ b/gfarm_v2/trunk/man/man1/gfusage.1
@@ -3,22 +3,31 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFUSAGE" "1" "12 November 2006" "Gfarm" ""
+.TH "GFUSAGE" "1" "23 March 2011" "Gfarm" ""
 
 .SH NAME
-gfusage \- display Gfarm filesystem space usage
+gfusage \- display the current usage
 .SH SYNOPSIS
 
-\fBgfusage\fR [ \fB-c\fR ]
+\fBgfusage\fR [ \fBoptions\fR ] [ \fBname\fR ]
 
 .SH "DESCRIPTION"
 .PP
-\fBgfusage\fR displays Gfarm filesystem space usage
-for each user.
+\fBgfusage\fR displays the current usage for users
+or groups.  If \fIname\fR is specified, it displays
+only the specified user or group.  With the -g option, it displays the
+current usage for groups.  The current usage is available for users or
+groups after building a table of the current usage
+by \fBgfedquota\fR and
+\fBgfquotacheck\fR\&.
 .SH "OPTIONS"
 .TP
-\fB-c\fR
-Calculates total size, taking replicas into account.
+\fB-g\fR
+Displays the current usage for groups.
+.TP
+\fB-?\fR
+Displays a list of command options.
 .SH "SEE ALSO"
 .PP
-\fBgfdf\fR(1)
+\fBgfdf\fR(1),
+\fBgfquota\fR(1)
