--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm_attr.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm_attr.5.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfarm-attr.5'>
 
-<refentryinfo><date>4 Feb 2011</date></refentryinfo>
+<refentryinfo><date>1 Apr 2011</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm_attr</refentrytitle>
@@ -20,36 +20,47 @@
 <refsect1 id='description'><title>DESCRIPTION</title>
 
 <para>
-Gfarmの各ファイルやディレクトリは，
-拡張属性を複数持つことができます．
-拡張属性とは，名前に対する値のペアで構成されます．
-</para>
-
-<para>
-</para>
-
-<para>
+Gfarmの各ファイルやディレクトリは，拡張属性を複数持つことができます．拡
+張属性は，名前に対する値のペアです．
 </para>
 
 </refsect1>
 
 <refsect1 id='xattrnamespace'>
 <title>拡張属性の名前空間</title>
+
 <para>
-"gfarm."で始まる名前の拡張属性はGfarmが特別に扱います．それ以外の拡張属
-性はユーザが自由に名前を指定して値を格納できます．
+"gfarm."と"gfarm_root."で始まる名前の拡張属性はGfarmが特別に扱いま
+す．"user."で始まる名前の拡張属性はユーザが自由に値を格納できます．
+XML拡張属性は名前も自由に指定してXMLを格納できます．
 </para>
+
 <para>
-"gfarm."で始まる名前の拡張属性は誰でも参照できます．
-ファイルまたはディレクトリの所有者，またはgfarmrootグループに
-所属するユーザーだけが"gfarm."で始まる名前の拡張属性を作成または変更で
-きます．
-それ以外の拡張属性は，ファイルまたはディレクトリのアクセス権限によって
-読み書きできます．
+誰でも"gfarm.*"の拡張属性を取得できます．所有者，またはgfarmrootグルー
+プに所属するユーザだけが"gfarm.*"の拡張属性を変更できます．
+</para>
+
+<para>
+gfarmrootグループに所属するユーザ、または"gfarm_root.user"に記述された
+ユーザ、または"gfarm_root.group"に記述されたグループが、"gfarm_root.*"
+拡張属性を取得と変更できます。
+</para>
+
+<para>
+ファイルまたはディレクトリのパーミッションによって"user.*"拡張属性を取
+得と変更できます．
+</para>
+
+<para>
+XML拡張属性は，ファイルまたはディレクトリのパーミッションによって読み書
+きできます．
+</para>
+
+<para>
+シンボリックリンクは拡張属性を持つことができません．
 </para>
 
 </refsect1>
-
 
 <refsect1 id='gfarm-xattr'>
 <title>Gfarm 拡張属性</title>
@@ -62,7 +73,7 @@ Gfarmの各ファイルやディレクトリは，
 <term><parameter>gfarm.ncopy</parameter></term>
 <listitem>
 <para>
-gfmd で自動でファイルを複製する際に目標とする複製の合計数を格納します．
+gfmd で自動的にファイルを複製する際に目標とする複製の合計数を格納します．
 </para>
 </listitem>
 </varlistentry>
@@ -80,8 +91,29 @@ ACL(アクセスコントロールリスト)を格納します．
 <term><parameter>gfarm.acl_default</parameter></term>
 <listitem>
 <para>
-デフォルトACLを格納します．
-ディレクトリだけがこの拡張属性を利用します．
+デフォルトACLを格納します．ディレクトリだけがこの拡張属性を利用します．
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><parameter>gfarm_root.user</parameter></term>
+<listitem>
+<para>
+このファイルやディレクトリに特権を与えるユーザ名のリストを格納します．
+名前は改行 (\n) で区切られます．この拡張属性がディレクトリに付いている
+場合，新規作成された子エントリにもこの拡張属性がコピーされます．
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><parameter>gfarm_root.group</parameter></term>
+<listitem>
+<para>
+このファイルやディレクトリに特権を与えるグループ名のリストを格納しま
+す．名前は改行 (\n) で区切られます．この拡張属性がディレクトリに付いて
+いる場合，新規作成された子エントリにもこの拡張属性がコピーされます．
 </para>
 </listitem>
 </varlistentry>
@@ -89,6 +121,18 @@ ACL(アクセスコントロールリスト)を格納します．
 </variablelist>
 </refsect1>
 
+<refsect1 id='security'>
+<title>SECURITY NOTES</title>
+<para>
+任意のディレクトリやファイルの gfarm_root.{user,group} 拡張属性に，信頼
+していないユーザを登録している場合，-o suid,allow_other オプションを指
+定して root 権限でマウントしている gfarm2fs には (-o ro オプションまた
+は -o default_permissions オプションを付けていたとしても) セキュリティ・
+ホールがあります．このため，gfarm2fs の -o suid,allow_other オプション
+と gfarm_root.{user,group} 拡張属性の両方を同時に利用すべきではありませ
+ん．
+</para>
+</refsect1>
 
 <refsect1 id='see-also'><title>SEE ALSO</title>
 <para>
