--- a/gfarm_v2/trunk/man/man5/gfarm_attr.5
+++ b/gfarm_v2/trunk/man/man5/gfarm_attr.5
@@ -3,39 +3,70 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM_ATTR" "5" "07 February 2011" "Gfarm_attr" ""
+.TH "GFARM_ATTR" "5" "01 April 2011" "Gfarm_attr" ""
 
 .SH NAME
 gfarm_attr \- Gfarm Extended Attributes
 .SH "DESCRIPTION"
 .PP
-Files and directories in Gfarm filesystem can have Extended
-Attributes.  Extended attributes are name:value pairs.
-.PP
-.PP
+Every files and directories in Gfarm filesystem can have extended
+attributes.  Extended attributes are name:value pairs.
 .SH "EXTENDED ATTRIBUTE NAMESPACES"
 .PP
-The name of Extended Attribute which has "gfarm." prefix is special in
-Gfarm filesystem.
-Gfarm users can freely use the other names of Extended Attribute.
+The extended attributes which have "gfarm." or "gfarm_root." prefix
+name are specially treated in Gfarm filesystem.  General Gfarm users
+can freely use the extended attributes which have "user." prefix name.
+XML extended attributes can have any names.
 .PP
-Everyone can get the Extended Attributes named "gfarm.*".
-Owner or gfarmroot group can modify the Extended Attributes named "gfarm.*".
-The others of Extended Attribute can be read/modified on the files
-or directories permission.
+Everyone can get the "gfarm.*" extended attributes.  Owner or
+gfarmroot group can modify the "gfarm.*" extended attributes.
+.PP
+The users in gfarmroot group or the users in "gfarm_root.uesr" of the
+entry or the groups in "gfarm_root.group" of the entry can get/modify
+the "gfarm_root.*" extended attributes.
+.PP
+The "user.*" extended attributes can be gotten/modified on the entry
+(file or directory) permission.
+.PP
+Symbolic links cannot have any extended attributes.
 .SH "GFARM EXTENDED ATTRIBUTES"
 .PP
-The following is a list of the Extended Attribute names used in Gfarm
+The following is a list of the extended attribute names used in Gfarm
 filesystem.
 .TP
 \fB\fIgfarm.ncopy\fB\fR
-The number of file replicas to be created automatically in gfmd.
+This is the number of file replicas to be created automatically in
+gfmd.
 .TP
 \fB\fIgfarm.acl_access\fB\fR
-Access ACL (Access Control List).
+This is Access ACL (Access Control List).
 .TP
 \fB\fIgfarm.acl_default\fB\fR
-Default ACL. Only directories can have/use this Extended Attribute.
+This is Default ACL. Only directories can have/use this extended
+attribute.
+.TP
+\fB\fIgfarm_root.user\fB\fR
+This is the list of user names who can have the privilege for the
+entry (file or directory).  The names are separated by a new line
+(\\n).  This extended attribute is copied to a new entry (file or
+directory) from the parent directory (when the parent directory has
+this extended attribute).
+.TP
+\fB\fIgfarm_root.group\fB\fR
+This is the list of group names who can have the privilege for the
+entry (file or directory).  The names are separated by a new line
+(\\n).  This extended attribute is copied to a new entry (file or
+directory) from the parent directory (when the parent directory has
+this extended attribute).
+.SH "SECURITY NOTES"
+.PP
+When untrusted users are registered in the gfarm_root.{user,group}
+extended attributes of any files or directories,
+a Security Hole exists on the mount point of gfarm2fs with
+"-o suid,allow_other" option executed by root (even if either
+"-o ro" option or "-o default_permissions" option is also specified).
+Therefore both "-o suid,allow_other" option and
+gfarm_root.{user,group} extended attributes should not be used.
 .SH "SEE ALSO"
 .PP
 \fBgfxattr\fR(1),
